Sulfan Zayd (sulfan@gmail.com)
Arif Syamsudin (buitenzorg812@gmail.com)

Contributors :
Tobias Zeumer (tzeumer@verweisungsform.de)

THANKS TO OUR USERS AND COMMUNITIES, YOU ARE DEVELOPERS TO!

SENAYAN 3 Stable 12
========================================================================
- Added : Member login in OPAC
- Added : File download limitation based on Member type
- Added : new public template (terrafirma)


SENAYAN 3 Stable 11
========================================================================
- Added : Change Loan Date and Due Date manually in circulation transaction (if enabled)
- Added : Replaced language constants with gettext (thanks a lot to Tobias Zeumer).
- Added : German SQL (translates all default data).
- Added : Stock Take, List only item for current logged in user in current stock take and Upload item code list.
- Added : Label on Bibliographic records can have URL.
- Added : German translations from Tobias Zeumer.
- Added : security enhancement for language switch in sysconfig.
- Fixed : Some Javascripts code optimized.
- Fixed : date handling on holiday settings.
- Fixed : Biblio detail metadata notes field is now HTML stripped in OPAC's record detail
- Fixed : Skip stock take on item status not working when Stock take initialize.
- Fixed : Paging in loan rules.
- Fixed : Forcing UTF8 for MySQL/HTTP
- Fixed : Session cookies revision.
- Fixed : Simbio Form Table.
- Fixed : Fines list bugs in circulation.
- Fixed : Optimized OPAC's search engine.
- Fixed : Custom reports date filter.
- Fixed : AJAX error in Item Barcode Generator.
- Fixed : Mobile browser detection utility
- Fixed : many untranslated string, thanks to Tobias Zeumer


STABLE 10
========================================================================
- Fixed : Backup module
- Added : MODS (Metadata Object Description Schema) XML format
- Added : Z3950 bibliographic data service
- Added : Multimedia viewer
- Added : multiple file upload