@@ -82,9 +82,12 @@
         <!-- <input type="button" value="More Options" onclick="" class="button marginTop" /> -->
         </form>
         <br />
-        <h1 class="title_bar">About</h1>
-        <p>
-        Senayan is an open source Library Management System. It is build on Open source technology like PHP and MySQL. Senayan provides many features such as Bibliography database, Circulation, Membership and many more that will help "automating"  library tasks. This project is proudly sponsored by Pusat Informasi dan Humas Depdiknas and licensed under GPL v3.
+        <h1 class="title_bar">Award</h1>
+        <p align="center">
+        The Winner in the Category of OSS
+        <img src="template/blue/images/logo-inaicta.png"
+            alt="Indonesia ICT Award 2009" border="0" />
+        <br />
         </p>
         </div>
 
