@@ -86,6 +86,14 @@ Ported to Senayan by Hendro Wicaksono (hendrowicaksono@yahoo.com)
         Version 3.</p>
         <br />
 
+        <h2>Award</h2>
+        <p align="center">
+        The Winner in the Category of OSS
+        <img src="template/invention/images/logo-inaicta.png"
+            alt="Indonesia ICT Award 2009" border="0" />
+        </p>
+        <br />
+
         <h2>Validated</h2>
         <p align="center">
         <a href="http://validator.w3.org/check?uri=referer"><img
